# uk-crime-explorer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: eda.ipynb
src/: clustering.py  dashboard.py  ingest.py
